[gd_scene load_steps=4 format=3 uid="uid://cvl8j7kicitup"]

[ext_resource type="Script" uid="uid://7uyat6utt7w2" path="res://Scripts/scrolling_ground.gd" id="1_5unqo"]
[ext_resource type="Texture2D" uid="uid://dcbycj0j64clk" path="res://sprites/base.png" id="1_45sg5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5unqo"]
size = Vector2(335, 111)

[node name="ScrollingGround" type="Node2D"]
script = ExtResource("1_5unqo")

[node name="Ground1" type="Area2D" parent="."]
z_index = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_5unqo")

[node name="Sprite1" type="Sprite2D" parent="Ground1/CollisionShape2D"]
modulate = Color(0.2686335, 1.8049032e-07, 7.219613e-08, 1)
z_index = 20
texture_filter = 1
position = Vector2(-1, 10.5)
scale = Vector2(1.001, 1.2053572)
texture = ExtResource("1_45sg5")

[node name="Ground2" type="Area2D" parent="."]
z_index = 15
position = Vector2(336, 0)

[node name="Sprite2" type="Sprite2D" parent="Ground2"]
modulate = Color(0.2686335, 1.8049032e-07, 7.219613e-08, 1)
z_index = 10
texture_filter = 1
position = Vector2(-3.999997, 10.000001)
scale = Vector2(1, 1.1964285)
texture = ExtResource("1_45sg5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_5unqo")

[connection signal="body_entered" from="Ground1" to="." method="_on_ground_1_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_on_ground_1_body_entered"]
